reset build gradle and update recipe delete button